change run user

--- a/2.3/Dockerfile
+++ b/2.3/Dockerfile
@@ -71,7 +71,8 @@ RUN gem install foreman \
 
 # Setup
 RUN mkdir -p /app /var/log/app \
-  && rm -f /etc/nginx/sites-enabled/*
+  && rm -f /etc/nginx/sites-enabled/* \
+  && chown -R www-data:www-data /app /var/log/app
 
 # Configuration
 COPY nginx.conf /etc/nginx/
