--- a/2.3/supervisord.conf
+++ b/2.3/supervisord.conf
@@ -10,6 +10,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 auto_start=true
 autorestart=true
+user=www-data
 
 [program:nginx]
 command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
