--- a/2.3/app.conf
+++ b/2.3/app.conf
@@ -27,11 +27,12 @@ server {
     #   add_header 'Access-Control-Allow-Headers' 'Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
     # }
 
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_set_header X-Forwarded-Proto $scheme;
+    # proxy_set_header Host $http_host;
+    # proxy_set_header X-Real-IP $remote_addr;
+
     proxy_pass http://127.0.0.1:3000;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Real-IP $remote_addr;
     proxy_redirect off;
 
     proxy_connect_timeout       600;
