runtime foreman config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ script:
   - cd 2.3/
   - docker build -t maestrano/web-ruby:travis . > /dev/null 2>&1
 
+  #=======================================
+  # Test with minimal parameters
+  #=======================================
   # Run image
   - docker run -P -d --name travis-test -e GIT_URL=https://github.com/alachaum/sample_app_rails_4 -e GIT_BRANCH=master maestrano/web-ruby:travis
 
@@ -26,3 +29,23 @@ script:
 
   # Check that application is up
   - "curl http://${container_ip}:80/"
+
+  #=======================================
+  # Test with foreman options
+  #=======================================
+  # Run image
+  - docker run -P -d --name travis-test -e FOREMAN_OPTS="-m web=1" -e GIT_URL=https://github.com/alachaum/sample_app_rails_4 -e GIT_BRANCH=master maestrano/web-ruby:travis
+
+  # Get ip address
+  - "container_ip=`docker inspect --format '{{ .NetworkSettings.IPAddress }}' travis-test`"
+
+  # Wait for container to be ready
+  - try_count=0;
+  - HEALTH_CHECK="starting"
+  - while [ "$HEALTH_CHECK" == "starting" ] || [ "$HEALTH_CHECK" == "unhealthy" ]; do let "try_count++"; [ $try_count -gt 100 ] && exit 20; sleep 5; HEALTH_CHECK=$(docker inspect --format='{{.State.Health.Status}}' travis-test 2>/dev/null); done
+
+  # Check that application is up
+  - "curl http://${container_ip}:80/"
+
+  # Remove container
+  - docker rm -f travis-test
