--- a/2.3/supervisord.conf
+++ b/2.3/supervisord.conf
@@ -4,7 +4,7 @@ pidfile=/var/run/supervisord.pid
 nodaemon=true
 
 [program:app]
-command=/usr/local/bundle/bin/foreman start -d /app -p 3000
+command=/usr/local/bundle/bin/foreman start -d /app -p 3000 %(ENV_FOREMAN_OPTS)s
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
