Add blob type to img-src to display base64 images preview in the browser

--- a/2.3/nginx.conf
+++ b/2.3/nginx.conf
@@ -77,7 +77,7 @@ http {
   # you can tell the browser that it can only download content from the domains you explicitly allow
   # http://www.html5rocks.com/en/tutorials/security/content-security-policy/
   # https://www.owasp.org/index.php/Content_Security_Policy
-  # add_header Content-Security-Policy: "default-src 'none'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self'; img-src 'self' data: https://*.s3.amazonaws.com";
+  # add_header Content-Security-Policy: "default-src 'none'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self'; img-src 'self' data: https://*.s3.amazonaws.com blob:";
 
   ##
   # Virtual Host Configs
