--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 script:
   # Build docker image
   # - cd 2.3/
-  - docker build -t maestrano/web-ruby:travis -f ${VERSION}/Dockerfile . > /dev/null 2>&1
+  - docker build -t maestrano/web-ruby:travis -f ${VERSION}/Dockerfile .
 
   #=======================================
   # Test with minimal parameters
