--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 script:
   # Build docker image
   - cd 2.3/
-  - docker build -t maestrano/web-ruby:travis . > /dev/null 2>&1
+  - docker build -t maestrano/web-ruby:travis .
 
   #=======================================
   # Test with minimal parameters
