Fix invalid gem option

--- a/2.5/Dockerfile
+++ b/2.5/Dockerfile
@@ -41,7 +41,7 @@ RUN curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-
   && ln -s /usr/local/bin/node /usr/local/bin/nodejs
 
 # Install foreman
-RUN gem install foreman --no-ri --no-rdoc
+RUN gem install foreman --no-document
 
 # App Support tools
 RUN mkdir -p /app_support/geocoder \
